# aero-arb-mm-bot

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.md  docker-compose.yml
monitoring/: prometheus.yml
output/executions/: trades_2025-06-07.jsonl  trades_2025-06-12.jsonl
output/logs/: aerodrome-bot.log.2025-06-07-22  aerodrome-bot.log.2025-06-07-23  aerodrome-bot.log.2025-06-12-17
output/market_making/: signals_2025-06-07.jsonl  signals_2025-06-12.jsonl
output/opportunities/: arbitrage_2025-06-07.jsonl  arbitrage_2025-06-12.jsonl
src/: lib.rs  main.rs
src/arbitrage/: calculator.rs  mod.rs
src/config/: mod.rs  settings.rs
src/errors/: bot_error.rs  circuit_breaker.rs  mod.rs  recovery.rs
src/execution/: engine.rs  mod.rs  simulation.rs
src/market_making/: engine.rs  mod.rs
src/network/: mod.rs  providers.rs  retry.rs
src/pools/: info.rs  liquidity.rs  mod.rs  reserves.rs  validation.rs
src/storage/: executions.rs  market_making.rs  mod.rs  opportunities.rs
src/types/: addresses.rs  arbitrage.rs  execution.rs  health.rs  market_making.rs  mod.rs  pools.rs  validation.rs  volatility.rs
src/utils/: display.rs  health.rs  logging.rs  math.rs  mod.rs
src/validation/: liquidity.rs  mod.rs  opportunity.rs  price.rs
src/volatility/: calculator.rs  mod.rs  multi_timeframe.rs
